--- a/tenki_app/css/style.css
+++ b/tenki_app/css/style.css
@@ -195,13 +195,27 @@ table td {
     font-weight: normal;
 }
 
+.region {
+    font-size: 18px;
+    margin-top: 10px;
+}
+
+#aside-wrapper li {
+    list-style: none;
+    border-bottom: 1px #ddd solid;
+}
+
 .sub-menu {
     margin-bottom: 60px;
     list-style: none;
 }
+
+/*
 .sub-menu li {
     border-bottom: 1px #ddd solid;
 }
+*/
+
 .sub-menu a {
     color: #432;
     padding: 10px;
@@ -212,6 +226,74 @@ table td {
 }
 
 
+
+/* CSS for CodePen */
+.accordion__container {
+    width: 300px;
+    margin: 0 auto;
+}
+
+.region {
+    margin-top: 10px;
+    background-color: #432;
+    border: 1px solid transparent;
+    color: #fff;
+    font-size: 16px;
+    padding: 5px 5px 5px 10px;
+    position: relative;
+    cursor: pointer;
+    user-select: none;
+}
+
+.region::before, 
+.region::after {
+    content: '';
+    display: block;
+    background-color: #fff;
+    position: absolute;
+    top: 50%;
+    width: 15px;
+    height: 2px;
+    right: 25px;
+}
+
+.region::after {
+    transform: rotate(90deg);
+    transition-duration: .3s;
+}
+
+.region:hover,
+.region:active,
+.region.is-active { 
+    background-color: #0bd;
+}
+
+.region.is-active::before {
+    opacity: 0;
+}
+
+.region.is-active::after {
+    transform: rotate(0);
+}
+
+.acc-contents {
+    border-left: 1px solid transparent;
+    border-right: 1px solid transparent;
+    padding: 2px 10px;
+    line-height: 0;
+    height: 0;
+    overflow: hidden;
+    opacity: 0;
+    transition-duration: .3s;
+}
+
+.acc-contents.is-open {
+    border: 1px solid #00aaa7;
+    padding: 4px 10px;
+    line-height: normal; /* numberに書き換える*/
+    height: auto;
+    opacity: 1;
+}
 
 
 
